--- a/index.html
+++ b/index.html
@@ -3,146 +3,69 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Persona & Case Study Demo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 1.5rem;
-    }
-    #orderValue {
-      margin-bottom: 0.5rem;
-      font-weight: bold;
-    }
-    #personaMessage, #similarBusinesses {
-      margin-top: 0.5rem;
-      padding: 1rem;
-      background: #f0f0f0;
-      border-radius: 4px;
-    }
-  </style>
+  <title>Zenstores Homepage with Calculator</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h2>Find Your Business Persona</h2>
+  <div class="page-container">
+    <!-- Left side: simplified homepage intro -->
+    <section class="homepage-intro">
+      <h1>Upgrade your shipping. <br /><em><strong>From checkout to dispatch.</strong></em></h1>
+      <p>Zenstores connects your checkout with how you actually ship orders. Unlock smarter delivery, faster fulfilment, and big savings on postage - all through one seamless integration.</p>
 
-  <label for="orders">Monthly Orders:</label>
-  <input
-    type="range"
-    id="orders"
-    min="0"
-    max="20000"
-    step="100"
-    value="1000"
-  />
-  <div id="orderValue">1,000</div>
+      <div class="buttons-row">
+        <button class="btn get-started">Get Started</button>
+        <button class="btn see-action">See it in action</button>
+      </div>
 
-  <div id="personaMessage"></div>
+      <div class="reviews-row">
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e5c72c34008b472ec1_review-stars-shopifyappstore.svg" alt="Shopify App Store Reviews" />
+        <img src="https://cdn.prod.website-files.com/66977bd785453b9d7b04a8b2/6697d0e55dec634b9685e7bf_review-stars-capterra.svg" alt="Capterra Reviews" />
+      </div>
+    </section>
 
-  <label for="aov">Average Order Value (£):</label>
-  <input type="number" id="aov" placeholder="Enter Average Order Value" />
+    <!-- Right side: calculator widget -->
+    <section class="calculator-container">
+      <div class="calculator current-logic">
+        <h2>What's the opportunity?</h2>
 
-  <div id="similarBusinesses"></div>
+        <!-- Business category selector -->
+        <div class="business-category">
+          <p>Select your business category:</p>
+          <div class="category-buttons">
+            <button data-category="Fashion" class="category-btn selected" title="Fashion">
+              👗<br /><span>Fashion</span>
+            </button>
+            <button data-category="Food & Drink" class="category-btn" title="Food & Drink">
+              🍔<br /><span>Food & Drink</span>
+            </button>
+            <button data-category="Beauty & Fitness" class="category-btn" title="Beauty & Fitness">
+              💄<br /><span>Beauty & Fitness</span>
+            </button>
+            <button data-category="Other" class="category-btn" title="Other">
+              🏡<br /><span>Other</span>
+            </button>
+          </div>
+        </div>
 
-  <script>
-    const ordersInput = document.getElementById("orders");
-    const aovInput = document.getElementById("aov");
-    const orderValueDisplay = document.getElementById("orderValue");
-    const personaMessageDiv = document.getElementById("personaMessage");
-    const similarBusinessesDiv = document.getElementById("similarBusinesses");
+        <!-- Persona message below category -->
+        <div id="personaMessage" class="persona-box"></div>
 
-    // Personas based on order volume tiers
-    // Small: 0-4999, Medium: 5000-9999, Large: 10000+
-    const personas = [
-      { min: 0, max: 4999, name: "Small Business" },
-      { min: 5000, max: 9999, name: "Growing Business" },
-      { min: 10000, max: Infinity, name: "Powerhouse" },
-    ];
+        <!-- Monthly orders slider -->
+        <label for="orders">Monthly Orders: <span id="orderValue">250</span></label>
+        <input type="range" id="orders" min="250" max="20000" value="250" step="250" />
 
-    // Categories and case studies mapped by order volume tier and category
-    // Format: category -> [small, medium, large]
-    const caseStudies = {
-      "Food & Drink": [
-        { name: "Alex's Apples", size: "Small" },
-        { name: "Tom's Tomatoes", size: "Medium" },
-        { name: "Mikey's Munch", size: "Large" },
-      ],
-      "Beauty & Fitness": [
-        { name: "Alex's Algae", size: "Small" },
-        { name: "Tom's Training", size: "Medium" },
-        { name: "Mikey's Mascara", size: "Large" },
-      ],
-      Fashion: [
-        { name: "Alex's Aprons", size: "Small" },
-        { name: "Tom's Tees", size: "Medium" },
-        { name: "Mikey's Mitten's", size: "Large" },
-      ],
-    };
+        <!-- Average order value -->
+        <label for="aov">Average Order Value (£):</label>
+        <input type="number" id="aov" value="50" min="0" />
 
-    // Function to find persona by order count
-    function getPersona(orders) {
-      return (
-        personas.find(({ min, max }) => orders >= min && orders <= max) || {
-          name: "Unknown",
-        }
-      );
-    }
+        <!-- Similar businesses we've helped -->
+        <h3>Similar businesses we've helped</h3>
+        <div id="similarBusinesses" class="similar-businesses-container"></div>
+      </div>
+    </section>
+  </div>
 
-    // Function to get order volume tier index for case study lookup
-    function getOrderVolumeIndex(orders) {
-      if (orders <= 4999) return 0; // Small
-      if (orders <= 9999) return 1; // Medium
-      return 2; // Large
-    }
-
-    // Default selected category
-    let selectedCategory = "Food & Drink";
-
-    // Update display based on inputs
-    function updateDisplay() {
-      const orders = Number(ordersInput.value);
-      const aov = Number(aovInput.value);
-      const persona = getPersona(orders);
-      const tierIndex = getOrderVolumeIndex(orders);
-
-      orderValueDisplay.textContent = orders.toLocaleString();
-
-      // Persona message below order volume slider
-      personaMessageDiv.textContent = `You’re a "${selectedCategory} ${persona.name}".`;
-
-      // Show the matching case study for that category and order volume tier
-      const caseStudy = caseStudies[selectedCategory][tierIndex];
-      similarBusinessesDiv.innerHTML = `<strong>Similar business:</strong> ${caseStudy.name} (${caseStudy.size})`;
-    }
-
-    // Event listeners
-    ordersInput.addEventListener("input", updateDisplay);
-    aovInput.addEventListener("input", updateDisplay);
-
-    // For demo: add simple category selection (optional)
-    const categories = Object.keys(caseStudies);
-    const categorySelect = document.createElement("select");
-    categories.forEach((cat) => {
-      const option = document.createElement("option");
-      option.value = cat;
-      option.textContent = cat;
-      categorySelect.appendChild(option);
-    });
-    categorySelect.value = selectedCategory;
-    categorySelect.style.marginTop = "1rem";
-    categorySelect.addEventListener("change", () => {
-      selectedCategory = categorySelect.value;
-      updateDisplay();
-    });
-    document.body.insertBefore(categorySelect, aovInput);
-
-    // Initial display update
-    updateDisplay();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
